SAB/SABParser.py
# Generated from SAB.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SABParser ( Parser ):

    grammarFileName = "SAB.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "' '", "':'", "' IMAGE '", "' TEXT '", 
                     "'/'", "'.'", "'png'", "'jpg'", "'jpeg'", "'bmp'", 
                     "'.sh'", "'-'", "'_'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'SOURCE'", "'SLIDESHOW'", "'OVERLAY'", 
                     "'GROUP'", "'COMMAND'", "'JUSTIFY'", "'TIME'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'ORDER'", "'SHUFFLE'", "'ALPHABETICAL'", 
                     "'RIGHT'", "'LEFT'", "'TOP'", "'BOTTOM'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PERCENT", 
                      "DIGIT", "LETTER", "NEWLINE", "SOURCE", "SLIDESHOW", 
                      "OVERLAY", "GROUP", "COMMAND", "JUSTIFY", "TIME", 
                      "SECOND", "MINUTE", "HOUR", "ORDER", "SHUFFLE", "ALPHABETICAL", 
                      "RIGHT", "LEFT", "TOP", "BOTTOM", "END" ]

    RULE_s = 0
    RULE_head = 1
    RULE_source = 2
    RULE_group = 3
    RULE_overlay_image = 4
    RULE_overlay_text = 5
    RULE_command = 6
    RULE_position = 7
    RULE_justified_pos = 8
    RULE_slideshow = 9
    RULE_slidesource = 10
    RULE_slidetime = 11
    RULE_slideorder = 12
    RULE_timetype = 13
    RULE_path = 14
    RULE_image = 15
    RULE_script = 16
    RULE_variable = 17

    ruleNames =  [ "s", "head", "source", "group", "overlay_image", "overlay_text", 
                   "command", "position", "justified_pos", "slideshow", 
                   "slidesource", "slidetime", "slideorder", "timetype", 
                   "path", "image", "script", "variable" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    PERCENT=15
    DIGIT=16
    LETTER=17
    NEWLINE=18
    SOURCE=19
    SLIDESHOW=20
    OVERLAY=21
    GROUP=22
    COMMAND=23
    JUSTIFY=24
    TIME=25
    SECOND=26
    MINUTE=27
    HOUR=28
    ORDER=29
    SHUFFLE=30
    ALPHABETICAL=31
    RIGHT=32
    LEFT=33
    TOP=34
    BOTTOM=35
    END=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def head(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SABParser.HeadContext)
            else:
                return self.getTypedRuleContext(SABParser.HeadContext,i)


        def END(self):
            return self.getToken(SABParser.END, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.NEWLINE)
            else:
                return self.getToken(SABParser.NEWLINE, i)

        def getRuleIndex(self):
            return SABParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = SABParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.head()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SABParser.NEWLINE:
                self.state = 37
                self.match(SABParser.NEWLINE)
                self.state = 38
                self.head()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(SABParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def slideshow(self):
            return self.getTypedRuleContext(SABParser.SlideshowContext,0)


        def group(self):
            return self.getTypedRuleContext(SABParser.GroupContext,0)


        def overlay_text(self):
            return self.getTypedRuleContext(SABParser.Overlay_textContext,0)


        def overlay_image(self):
            return self.getTypedRuleContext(SABParser.Overlay_imageContext,0)


        def source(self):
            return self.getTypedRuleContext(SABParser.SourceContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)




    def head(self):

        localctx = SABParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_head)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 46
                self.slideshow()
                pass

            elif la_ == 2:
                self.state = 47
                self.group()
                pass

            elif la_ == 3:
                self.state = 48
                self.overlay_text()
                pass

            elif la_ == 4:
                self.state = 49
                self.overlay_image()
                pass

            elif la_ == 5:
                self.state = 50
                self.source()
                pass


            self.state = 53
            self.match(SABParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOURCE(self):
            return self.getToken(SABParser.SOURCE, 0)

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def path(self):
            return self.getTypedRuleContext(SABParser.PathContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)




    def source(self):

        localctx = SABParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_source)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SABParser.SOURCE)
            self.state = 56
            self.match(SABParser.T__1)
            self.state = 57
            self.variable()
            self.state = 58
            self.match(SABParser.T__1)
            self.state = 59
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(SABParser.GROUP, 0)

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.NEWLINE)
            else:
                return self.getToken(SABParser.NEWLINE, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.DIGIT)
            else:
                return self.getToken(SABParser.DIGIT, i)

        def path(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SABParser.PathContext)
            else:
                return self.getTypedRuleContext(SABParser.PathContext,i)


        def image(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SABParser.ImageContext)
            else:
                return self.getTypedRuleContext(SABParser.ImageContext,i)


        def getRuleIndex(self):
            return SABParser.RULE_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup" ):
                listener.enterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup" ):
                listener.exitGroup(self)




    def group(self):

        localctx = SABParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SABParser.GROUP)
            self.state = 62
            self.match(SABParser.T__1)
            self.state = 63
            self.variable()
            self.state = 64
            self.match(SABParser.T__2)
            self.state = 65
            self.match(SABParser.NEWLINE)
            self.state = 66
            self.match(SABParser.DIGIT)
            self.state = 67
            self.match(SABParser.T__1)
            self.state = 68
            self.path()
            self.state = 69
            self.image()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SABParser.NEWLINE:
                self.state = 70
                self.match(SABParser.NEWLINE)
                self.state = 71
                self.match(SABParser.DIGIT)
                self.state = 72
                self.match(SABParser.T__1)
                self.state = 73
                self.path()
                self.state = 74
                self.image()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Overlay_imageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OVERLAY(self):
            return self.getToken(SABParser.OVERLAY, 0)

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.NEWLINE)
            else:
                return self.getToken(SABParser.NEWLINE, i)

        def path(self):
            return self.getTypedRuleContext(SABParser.PathContext,0)


        def image(self):
            return self.getTypedRuleContext(SABParser.ImageContext,0)


        def position(self):
            return self.getTypedRuleContext(SABParser.PositionContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_overlay_image

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOverlay_image" ):
                listener.enterOverlay_image(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOverlay_image" ):
                listener.exitOverlay_image(self)




    def overlay_image(self):

        localctx = SABParser.Overlay_imageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_overlay_image)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SABParser.OVERLAY)
            self.state = 82
            self.match(SABParser.T__3)
            self.state = 83
            self.variable()
            self.state = 84
            self.match(SABParser.T__2)
            self.state = 85
            self.match(SABParser.NEWLINE)
            self.state = 86
            self.path()
            self.state = 87
            self.image()
            self.state = 88
            self.match(SABParser.NEWLINE)
            self.state = 89
            self.position()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Overlay_textContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OVERLAY(self):
            return self.getToken(SABParser.OVERLAY, 0)

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def NEWLINE(self):
            return self.getToken(SABParser.NEWLINE, 0)

        def command(self):
            return self.getTypedRuleContext(SABParser.CommandContext,0)


        def position(self):
            return self.getTypedRuleContext(SABParser.PositionContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_overlay_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOverlay_text" ):
                listener.enterOverlay_text(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOverlay_text" ):
                listener.exitOverlay_text(self)




    def overlay_text(self):

        localctx = SABParser.Overlay_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_overlay_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SABParser.OVERLAY)
            self.state = 92
            self.match(SABParser.T__4)
            self.state = 93
            self.variable()
            self.state = 94
            self.match(SABParser.T__2)
            self.state = 95
            self.match(SABParser.NEWLINE)
            self.state = 96
            self.command()
            self.state = 97
            self.position()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMAND(self):
            return self.getToken(SABParser.COMMAND, 0)

        def path(self):
            return self.getTypedRuleContext(SABParser.PathContext,0)


        def script(self):
            return self.getTypedRuleContext(SABParser.ScriptContext,0)


        def NEWLINE(self):
            return self.getToken(SABParser.NEWLINE, 0)

        def getRuleIndex(self):
            return SABParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = SABParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SABParser.COMMAND)
            self.state = 100
            self.match(SABParser.T__1)
            self.state = 101
            self.path()
            self.state = 102
            self.script()
            self.state = 103
            self.match(SABParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PositionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERCENT(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.PERCENT)
            else:
                return self.getToken(SABParser.PERCENT, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.NEWLINE)
            else:
                return self.getToken(SABParser.NEWLINE, i)

        def JUSTIFY(self):
            return self.getToken(SABParser.JUSTIFY, 0)

        def justified_pos(self):
            return self.getTypedRuleContext(SABParser.Justified_posContext,0)


        def RIGHT(self):
            return self.getToken(SABParser.RIGHT, 0)

        def LEFT(self):
            return self.getToken(SABParser.LEFT, 0)

        def TOP(self):
            return self.getToken(SABParser.TOP, 0)

        def BOTTOM(self):
            return self.getToken(SABParser.BOTTOM, 0)

        def getRuleIndex(self):
            return SABParser.RULE_position

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosition" ):
                listener.enterPosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosition" ):
                listener.exitPosition(self)




    def position(self):

        localctx = SABParser.PositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_position)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not(_la==SABParser.RIGHT or _la==SABParser.LEFT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 106
            self.match(SABParser.T__1)
            self.state = 107
            self.match(SABParser.PERCENT)
            self.state = 108
            self.match(SABParser.NEWLINE)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==SABParser.TOP or _la==SABParser.BOTTOM):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self.match(SABParser.T__1)
            self.state = 111
            self.match(SABParser.PERCENT)
            self.state = 112
            self.match(SABParser.NEWLINE)
            self.state = 113
            self.match(SABParser.JUSTIFY)
            self.state = 114
            self.match(SABParser.T__1)
            self.state = 115
            self.justified_pos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Justified_posContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT(self):
            return self.getToken(SABParser.RIGHT, 0)

        def LEFT(self):
            return self.getToken(SABParser.LEFT, 0)

        def getRuleIndex(self):
            return SABParser.RULE_justified_pos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJustified_pos" ):
                listener.enterJustified_pos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJustified_pos" ):
                listener.exitJustified_pos(self)




    def justified_pos(self):

        localctx = SABParser.Justified_posContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_justified_pos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not(_la==SABParser.RIGHT or _la==SABParser.LEFT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SlideshowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLIDESHOW(self):
            return self.getToken(SABParser.SLIDESHOW, 0)

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def NEWLINE(self):
            return self.getToken(SABParser.NEWLINE, 0)

        def slidesource(self):
            return self.getTypedRuleContext(SABParser.SlidesourceContext,0)


        def slidetime(self):
            return self.getTypedRuleContext(SABParser.SlidetimeContext,0)


        def slideorder(self):
            return self.getTypedRuleContext(SABParser.SlideorderContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_slideshow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlideshow" ):
                listener.enterSlideshow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlideshow" ):
                listener.exitSlideshow(self)




    def slideshow(self):

        localctx = SABParser.SlideshowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_slideshow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SABParser.SLIDESHOW)
            self.state = 120
            self.match(SABParser.T__1)
            self.state = 121
            self.variable()
            self.state = 122
            self.match(SABParser.T__2)
            self.state = 123
            self.match(SABParser.NEWLINE)
            self.state = 124
            self.slidesource()
            self.state = 125
            self.slidetime()
            self.state = 126
            self.slideorder()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SlidesourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.DIGIT)
            else:
                return self.getToken(SABParser.DIGIT, i)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SABParser.VariableContext)
            else:
                return self.getTypedRuleContext(SABParser.VariableContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.NEWLINE)
            else:
                return self.getToken(SABParser.NEWLINE, i)

        def getRuleIndex(self):
            return SABParser.RULE_slidesource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlidesource" ):
                listener.enterSlidesource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlidesource" ):
                listener.exitSlidesource(self)




    def slidesource(self):

        localctx = SABParser.SlidesourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_slidesource)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.match(SABParser.DIGIT)
                self.state = 129
                self.match(SABParser.T__1)
                self.state = 130
                self.variable()
                self.state = 131
                self.match(SABParser.NEWLINE)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SABParser.DIGIT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SlidetimeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIME(self):
            return self.getToken(SABParser.TIME, 0)

        def timetype(self):
            return self.getTypedRuleContext(SABParser.TimetypeContext,0)


        def NEWLINE(self):
            return self.getToken(SABParser.NEWLINE, 0)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(SABParser.DIGIT)
            else:
                return self.getToken(SABParser.DIGIT, i)

        def getRuleIndex(self):
            return SABParser.RULE_slidetime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlidetime" ):
                listener.enterSlidetime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlidetime" ):
                listener.exitSlidetime(self)




    def slidetime(self):

        localctx = SABParser.SlidetimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_slidetime)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(SABParser.TIME)
            self.state = 138
            self.match(SABParser.T__1)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.match(SABParser.DIGIT)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SABParser.DIGIT):
                    break

            self.state = 144
            self.match(SABParser.T__1)
            self.state = 145
            self.timetype()
            self.state = 146
            self.match(SABParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SlideorderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(SABParser.ORDER, 0)

        def SHUFFLE(self):
            return self.getToken(SABParser.SHUFFLE, 0)

        def ALPHABETICAL(self):
            return self.getToken(SABParser.ALPHABETICAL, 0)

        def getRuleIndex(self):
            return SABParser.RULE_slideorder

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlideorder" ):
                listener.enterSlideorder(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlideorder" ):
                listener.exitSlideorder(self)




    def slideorder(self):

        localctx = SABParser.SlideorderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_slideorder)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(SABParser.ORDER)
            self.state = 149
            self.match(SABParser.T__1)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==SABParser.SHUFFLE or _la==SABParser.ALPHABETICAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TimetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECOND(self):
            return self.getToken(SABParser.SECOND, 0)

        def MINUTE(self):
            return self.getToken(SABParser.MINUTE, 0)

        def HOUR(self):
            return self.getToken(SABParser.HOUR, 0)

        def getRuleIndex(self):
            return SABParser.RULE_timetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimetype" ):
                listener.enterTimetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimetype" ):
                listener.exitTimetype(self)




    def timetype(self):

        localctx = SABParser.TimetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_timetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SABParser.SECOND) | (1 << SABParser.MINUTE) | (1 << SABParser.HOUR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def path(self):
            return self.getTypedRuleContext(SABParser.PathContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = SABParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_path)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(SABParser.T__5)
            self.state = 155
            self.variable()
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 156
                self.path()
                pass

            elif la_ == 2:
                self.state = 157
                self.match(SABParser.T__5)
                pass

            elif la_ == 3:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(SABParser.VariableContext,0)


        def getRuleIndex(self):
            return SABParser.RULE_image

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImage" ):
                listener.enterImage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImage" ):
                listener.exitImage(self)




    def image(self):

        localctx = SABParser.ImageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_image)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.variable()
            self.state = 162
            self.match(SABParser.T__6)
            self.state = 163
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SABParser.T__7) | (1 << SABParser.T__8) | (1 << SABParser.T__9) | (1 << SABParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptContext(ParserRuleContext):
